@@ -4,6 +4,9 @@
 ** start it with "PlayTest pri < mysample.raw" !
 ** Where pri is a number from -128 to +127 (may be omitted)
 ** The sample should be 8 bit signed, mono (see TYPE).
+**
+** PLEASE NOTE that earlier versions of this example contained a bug
+** that sometimes DeleteIORequest'ed a pointer that was AllocMem'ed!
 */
 
 #include <devices/ahi.h>
@@ -19,8 +22,9 @@
 #define BUFFERSIZE 20000
 
 struct MsgPort    *AHImp     = NULL;
+struct AHIRequest *AHIios[2] = NULL;
 struct AHIRequest *AHIio     = NULL;
-struct AHIRequest *AHIio2    = NULL;
+APTR               AHIiocopy = NULL;
 BYTE               AHIDevice = -1;
 
 __far BYTE buffer1[BUFFERSIZE];
@@ -31,7 +35,7 @@ void cleanup(LONG rc)
   if(!AHIDevice)
     CloseDevice((struct IORequest *)AHIio);
   DeleteIORequest((struct IORequest *)AHIio);
-  DeleteIORequest((struct IORequest *)AHIio2);
+  FreeMem(AHIiocopy,sizeof(struct AHIRequest));
   DeleteMsgPort(AHImp);
   exit(rc);
 }
@@ -65,11 +69,13 @@ void main(int argc, char *argv[])
   }
 
 // Make a copy of the request (for double buffering)
-  AHIio2 = AllocMem(sizeof(struct AHIRequest), MEMF_ANY);
-  if(! AHIio2) {
+  AHIiocopy = AllocMem(sizeof(struct AHIRequest), MEMF_ANY);
+  if(! AHIiocopy) {
     cleanup(RETURN_FAIL);
   }
-  CopyMem(AHIio, AHIio2, sizeof(struct AHIRequest));
+  CopyMem(AHIio, AHIiocopy, sizeof(struct AHIRequest));
+  AHIios[0]=AHIio;
+  AHIios[1]=AHIiocopy;
 
   SetIoErr(0);
 
@@ -79,17 +85,17 @@ void main(int argc, char *argv[])
     length = Read(Input(),p1,BUFFERSIZE);
 
 // Play buffer
-    AHIio->ahir_Std.io_Message.mn_Node.ln_Pri = pri;
-    AHIio->ahir_Std.io_Command  = CMD_WRITE;
-    AHIio->ahir_Std.io_Data     = p1;
-    AHIio->ahir_Std.io_Length   = length;
-    AHIio->ahir_Std.io_Offset   = 0;
-    AHIio->ahir_Frequency       = FREQUENCY;
-    AHIio->ahir_Type            = TYPE;
-    AHIio->ahir_Volume          = 0x10000;          // Full volume
-    AHIio->ahir_Position        = 0x8000;           // Centered
-    AHIio->ahir_Link            = link;
-    SendIO((struct IORequest *) AHIio);
+    AHIios[0]->ahir_Std.io_Message.mn_Node.ln_Pri = pri;
+    AHIios[0]->ahir_Std.io_Command  = CMD_WRITE;
+    AHIios[0]->ahir_Std.io_Data     = p1;
+    AHIios[0]->ahir_Std.io_Length   = length;
+    AHIios[0]->ahir_Std.io_Offset   = 0;
+    AHIios[0]->ahir_Frequency       = FREQUENCY;
+    AHIios[0]->ahir_Type            = TYPE;
+    AHIios[0]->ahir_Volume          = 0x10000;          // Full volume
+    AHIios[0]->ahir_Position        = 0x8000;           // Centered
+    AHIios[0]->ahir_Link            = link;
+    SendIO((struct IORequest *) AHIios[0]);
 
     if(link) {
 
@@ -111,30 +117,30 @@ void main(int argc, char *argv[])
 
 // Check for end-of-sound, and wait until it is finished before aborting
     if(length != BUFFERSIZE) {
-      WaitIO((struct IORequest *) AHIio);
+      WaitIO((struct IORequest *) AHIios[0]);
       break;
     }
 
-    link = AHIio;
+    link = AHIios[0];
 
 // Swap buffer and request pointers, and restart
     tmp    = p1;
     p1     = p2;
     p2     = tmp;
 
-    tmp    = AHIio;
-    AHIio  = AHIio2;
-    AHIio2 = tmp;
+    tmp    = AHIios[0];
+    AHIios[0] = AHIios[1];
+    AHIios[1] = tmp;
   }
   
 
 // Abort any pending iorequests
-  AbortIO((struct IORequest *) AHIio);
-  WaitIO((struct IORequest *) AHIio);
+  AbortIO((struct IORequest *) AHIios[0]);
+  WaitIO((struct IORequest *) AHIios[0]);
 
   if(link) { // Only if the second request was started
-    AbortIO((struct IORequest *) AHIio2);
-    WaitIO((struct IORequest *) AHIio2);
+    AbortIO((struct IORequest *) AHIios[1]);
+    WaitIO((struct IORequest *) AHIios[1]);
   }
 
   if(IoErr()) {
